Fix position of book info modal relative to book, fix book overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,20 +23,20 @@ button{
 }
 
 .title-frame{
-    height: 10rem;
+    height: clamp(5rem, 15vw, 10rem);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .subtitle-frame{
-    height: clamp(3rem, 10vw, 8rem);
+    height: 12rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .webpage-icon{
     width: clamp(5rem, 15vw, 10rem);
-    height: clamp(10rem, 20vh, 20rem);
+    height: clamp(5rem, 15vw, 10rem);
 }
 .webpage-title{
     display: inline-block;
@@ -207,7 +207,7 @@ input::-webkit-file-upload-button:hover{
 .book-frame{
     margin: 0 auto;
     width: min(100%, 60rem);
-    height: max(80vw, 40rem);
+    height: max(70vw, 40rem);
 }
 .book-frame::before, .book-frame::after{
     content: '';
@@ -215,10 +215,15 @@ input::-webkit-file-upload-button:hover{
     width: 80%;
     height: .2rem;
     position: relative;
-    top: 3rem;
     display: block;
     background: var(--black);
     border-radius: 10%;
+}
+.book-frame::before{
+    top: -1rem;
+}
+.book-frame::after{
+    top: 1rem;
 }
 .book-rack{
     padding: clamp(2rem, 5vh, 3rem);
@@ -246,6 +251,7 @@ input::-webkit-file-upload-button:hover{
 
 .book{
     padding: 1rem;
+    position: relative;
     background-color: var(--white);
     border: .2rem solid var(--black);
     border-radius: 0 .5rem .5rem 0rem;
@@ -253,7 +259,6 @@ input::-webkit-file-upload-button:hover{
 }
 .book:hover, .book:focus, .book:active{
     background-color: var(--black);
-    color: var(--white);
     cursor: pointer;
 }
 .book > img{
@@ -282,6 +287,9 @@ input::-webkit-file-upload-button:hover{
     width: 7rem;
     height: 7rem;
 }
+#add-book-btn:hover, #add-book-btn:focus, #add-book-btn:active{
+    color: var(--white);
+}
 #add-book-btn:hover > svg, #add-book-btn:focus > svg, #add-book-btn:active > svg{
     fill: var(--white);
     cursor: pointer;
@@ -292,9 +300,9 @@ input::-webkit-file-upload-button:hover{
     margin: 0 auto;
     padding: clamp(.5rem, 5vh, 1rem);
     width: 14.5rem;
-    top: 30vh;
-    left: 0;
-    right: 0;
+    position: absolute;
+    top: 10rem;
+    left: -2.2rem;
     display: none;
     flex-flow: column wrap;
 }
